note for installation

--- a/workshop.Rmd
+++ b/workshop.Rmd
@@ -7,6 +7,8 @@ output: html_notebook
 
 ## Installation
 
+If you are using your personal computer:
+
 1. Download and Install R: https://cloud.r-project.org/
 2. Download and Install RStudio: https://www.rstudio.com/products/rstudio/download/#download
 3. Download and Install Anaconda: https://www.anaconda.com/distribution/
