--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -5,21 +5,14 @@ output: html_notebook
 
 # Intro
 
-## Install tidyverse
-
-```{r}
-install.packages("tidyverse")
-library(tidyverse)
-```
-
 ## 1958: Rosenblatt -- Perceptron (OR)
 
 ```{r}
-tt_or <- tibble(
+tt_or <- data.frame(
   a = c(0, 0, 1, 1),
   b = c(0, 1, 0, 1),
   r = c(0, 1, 1, 1)
-) %>% print()
+)
 ```
 
 ```{r}
@@ -28,18 +21,17 @@ x <- as.matrix(select(tt_or, a, b))
 b <- __
 w <- c(__, __)
 
-ifelse(w %*% x + b > 0, 1, 0)
+ifelse(x %*% w + b > 0, 1, 0)
 ```
 
 ## 1958: Rosenblatt -- Perceptron (AND)
 
 ```{r}
-library(tidyverse)
-tt_and <- tibble(
+tt_and <- data.frame(
   a = c(0, 0, 1, 1),
   b = c(0, 1, 0, 1),
   r = c(0, 0, 0, 1)
-) %>% print()
+)
 ```
 
 ```{r}
@@ -48,17 +40,17 @@ x <- as.matrix(select(tt_and, a, b))
 b <- __
 w <- c(__, __)
 
-ifelse(w %*% x + b > 0, 1, 0)
+ifelse(x %*% w + b > 0, 1, 0)
 ```
 
 ## 1969: Minsky and Papert -- Perceptron (XOR)
 
 ```{r}
-tt_xor <- tibble(
+tt_xor <- data.frame(
   a = c(0, 0, 1, 1),
   b = c(0, 1, 0, 1),
   r = c(0, 1, 1, 0)
-) %>% print()
+)
 ```
 
 ```{r}
@@ -73,7 +65,7 @@ ifelse(w %*% x + b > 0, 1, 0)
 ## 1969: Minsky and Papert -- Layered (XOR)
 
 ```{r}
-tt_xor <- tibble(
+tt_xor <- data.frame(
   a = c(0, 0, 1, 1),
   b = c(0, 1, 0, 1),
   c = c(1, 1, 1, 1),
@@ -100,7 +92,6 @@ Initialize,
 
 ```{r}
 w_1=0.1; w_2=0.2; b=0.3
-x_1=1.0; x_2=0.0; y=0.0
 step=0.01;
 
 f <- function(w_1, w_2, b, x_1, x_2) w_1 * x_1 + w_2 * x_2 + b
@@ -109,7 +100,7 @@ f <- function(w_1, w_2, b, x_1, x_2) w_1 * x_1 + w_2 * x_2 + b
 Approximate,
 
 ```{r}
-for (i in 1:10) {
+for (i in 1:100) {
   f_1 <- f(w_1, w_2, b, tt_and$a, tt_and$b)
   w_1 <- w_1 - ___
   w_2 <- w_2 - ___
